--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "lodash": "^4.17.21",
     "p-limit": "^6.1.0",
     "p-queue": "^8.0.1",
+    "quick-local-ip": "^1.0.7",
     "thrift": "^0.21.0",
-    "yaml": "^2.6.1"
+    "yaml": "^2.6.1",
+    "zookeeper": "^6.2.3"
   }
 }
